# pybridge

./: .gitignore  README.md  帮助文档.docx
PyCVApp/: build.gradle  gradle.properties  settings.gradle
PyCVApp/app/: build.gradle
PyCVApp/app/src/main/: AndroidManifest.xml
PyCVApp/app/src/main/assets/python/: bootstrap.py  main.py
PyCVApp/app/src/main/assets/python/scripts/: bootstrap.py  func_video_inspect_001.py  func_zmq.py
PyCVApp/app/src/main/java/com/byyd/pybridge/: AssetExtractor.java  PyAssetsExtractor.java  PyBridge.java  PyFuncs.java  PyFuncsCaller.java  PyLibsLoader.java  PythonUtil.java
PyCVApp/app/src/main/java/com/byyd/pycvapp/: MainActivity.java  MyIntentService.java
PyCVApp/app/src/main/java/com/jventura/pyapp/: MainActivity.java
PyCVApp/app/src/main/java/com/jventura/pybridge/: PyBridge.java  PythonUtil.java
PyCVApp/app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  pybridge.c
PyCVApp/app/src/main/jniLibs/arm64-v8a/: gdb.setup
PyCVApp/app/src/main/res/layout/: activity_main.xml
PyCVApp/app/src/main/res/values/: strings.xml
PyCVApp/gradle/wrapper/: gradle-wrapper.properties
python-for-android/: AndroidManifest.xml  build.gradle  build.xml  dist_info.json
python-for-android/libs/arm64-v8a/Include/: pyconfig.h
python-for-android/src/main/: AndroidManifest.xml
python-for-android/src/main/res/values/: strings.xml
